--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-02-01 Mon 10:03 -->
+<!-- 2021-02-01 Mon 10:50 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Literate K3s Cluster</title>
@@ -354,7 +354,6 @@ for the JavaScript code in this tag.
 <li><a href="#CLUSTER">2.1. CLUSTER</a></li>
 <li><a href="#CLUSTER_SSH_USER">2.2. CLUSTER_SSH_USER</a></li>
 <li><a href="#KUBE_CONFIG">2.3. KUBE_CONFIG</a></li>
-<li><a href="#Make%20the%20namespace%20directories">2.4. Make the namespace directories</a></li>
 </ul>
 </li>
 <li><a href="#Sealed%20Secrets">3. Sealed Secrets</a>
@@ -423,6 +422,7 @@ for the JavaScript code in this tag.
 <li><a href="#Test%20adding%20a%20new%20manfiest%20to%20the%20git%20repository">6.8. Test adding a new manfiest to the git repository</a></li>
 </ul>
 </li>
+<li><a href="#LICENSE">7. LICENSE</a></li>
 </ul>
 </div>
 </div>
@@ -741,7 +741,7 @@ Now open up <code>${HOME}/git/literate-k3s/k3s.org</code> inside of Emacs.
 <ul class="org-ul">
 <li>Start with the <a href="#Core%20Config">Core Config</a> section. Edit the variable <code>CLUSTER</code>, which is
 your (sub-)domain name you wish to give to the cluster. (eg.
-<code>k3s.example.com</code>). Then <a href="#Make%20the%20namespace%20directories">make the namespace directories</a>.</li>
+<code>k3s.example.com</code>).</li>
 <li>Next go to the section for <a href="#kube-system%20setup">kube-system setup</a>, and run the code block there to
 create the <code>kube-system</code> directory.</li>
 <li>Now go to the <a href="#kube-system">kube-system</a> section and edit all the variables there, most
@@ -963,7 +963,7 @@ syntax</a>. (ie. <code>&lt;&lt;name-of-variable-block&gt;&gt;</code>)
 <code>CLUSTER</code> is the domain name of your cluster:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org5c528ff">k3s.example.com
+<pre class="src src-config" id="org6244cc6">k3s.example.com
 </pre>
 </div>
 </div>
@@ -975,7 +975,7 @@ syntax</a>. (ie. <code>&lt;&lt;name-of-variable-block&gt;&gt;</code>)
 <code>CLUSTER_SSH_USER</code> is the admin SSH account of the cluster.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org44bd859">root
+<pre class="src src-config" id="org08cdbdc">root
 </pre>
 </div>
 </div>
@@ -987,13 +987,10 @@ syntax</a>. (ie. <code>&lt;&lt;name-of-variable-block&gt;&gt;</code>)
 <code>KUBE_CONFIG</code> is the local path to the kubectl config file
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org6327214">${HOME}/.kube/k3s.example.com-config
+<pre class="src src-config" id="org2c101cf">${HOME}/.kube/k3s.example.com-config
 </pre>
 </div>
 </div>
-</div>
-<div id="outline-container-Make%20the%20namespace%20directories" class="outline-3">
-<h3 id="Make%20the%20namespace%20directories"><span class="section-number-3">2.4</span> Make the namespace directories</h3>
 </div>
 </div>
 
@@ -1013,7 +1010,7 @@ secrets.
 <h3 id="Sealed%20Secrets%20Config"><span class="section-number-3">3.1</span> Sealed Secrets Config</h3>
 <div class="outline-text-3" id="text-3-1">
 <div class="org-src-container">
-<pre class="src src-config" id="orga853425">v0.14.1
+<pre class="src src-config" id="orgee3204b">v0.14.1
 </pre>
 </div>
 </div>
@@ -1101,7 +1098,7 @@ referenced elsewhere, via <a href="https://orgmode.org/manual/Noweb-Reference-Sy
 The version number of Traefik to install (eg. <code>2.3</code>).
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgfa79c91">v2.3
+<pre class="src src-config" id="org2b1f2b3">v2.3
 </pre>
 </div>
 </div>
@@ -1113,7 +1110,7 @@ The version number of Traefik to install (eg. <code>2.3</code>).
 <code>TRAEFIK_IMAGE</code> is the name:tag of the container image for traefik:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgdde584d">traefik:v2.3
+<pre class="src src-config" id="orgd406f69">traefik:v2.3
 </pre>
 </div>
 </div>
@@ -1126,7 +1123,7 @@ The version number of Traefik to install (eg. <code>2.3</code>).
 prodider. 
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org8993747">you@example.com
+<pre class="src src-config" id="org1fbcf7a">you@example.com
 </pre>
 </div>
 </div>
@@ -1139,7 +1136,7 @@ prodider.
 provider). 
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org1cfafbf">https://acme-staging-v02.api.letsencrypt.org/directory
+<pre class="src src-config" id="org76a2488">https://acme-staging-v02.api.letsencrypt.org/directory
 </pre>
 </div>
 
@@ -1180,7 +1177,7 @@ the rate limit, which blocks you out for a week.
 <code>TRAEFIK_LOG_LEVEL</code> is the filter level on the traefik log.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org8e60c79">INFO
+<pre class="src src-config" id="orga3eba98">INFO
 </pre>
 </div>
 </div>
@@ -1194,7 +1191,7 @@ domain name to respond to. <code>TRAEFIK_WHOAMI_DOMAIN</code> is the subdomain t
 whoami service responds to.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgb568639">whoami.k3s.example.com
+<pre class="src src-config" id="org756c7dc">whoami.k3s.example.com
 </pre>
 </div>
 </div>
@@ -1517,7 +1514,7 @@ to direct traffic to any other node.
 <div class="outline-text-4" id="text-4-3-11">
 <p>
 <a href="https://github.com/traefik/whoami">traefik/whoami</a> can be deployed to test Traefik functionality. It listens to the
-domain <a href="#orgb568639">TRAEFIK_WHOAMI_DOMAIN</a> (eg. <code>whoami.k3s.example.com</code>).
+domain <a href="#org756c7dc">TRAEFIK_WHOAMI_DOMAIN</a> (eg. <code>whoami.k3s.example.com</code>).
 </p>
 
 <div class="org-src-container">
@@ -1637,7 +1634,7 @@ Test with TLS verification on:
 </div>
 
 <p>
-TLS will not verify until you use the production <a href="#org1cfafbf">TRAEFIK_ACME_SERVER</a>.
+TLS will not verify until you use the production <a href="#org76a2488">TRAEFIK_ACME_SERVER</a>.
 </p>
 </div>
 </div>
@@ -1720,7 +1717,7 @@ easily mirror these repositories to external hosts like GitHub.
 <h4 id="GITEA_DOMAIN"><span class="section-number-4">5.4.1</span> GITEA_DOMAIN</h4>
 <div class="outline-text-4" id="text-5-4-1">
 <div class="org-src-container">
-<pre class="src src-config" id="org1d3a7a7">git.k3s.example.com
+<pre class="src src-config" id="org3b075b3">git.k3s.example.com
 </pre>
 </div>
 </div>
@@ -1732,7 +1729,7 @@ easily mirror these repositories to external hosts like GitHub.
 The size of the postgres database volume for gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org62cbe01">5Gi
+<pre class="src src-config" id="org2be4de8">5Gi
 </pre>
 </div>
 </div>
@@ -1744,7 +1741,7 @@ The size of the postgres database volume for gitea:
 The size of the data volume for gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org1645bc7">5Gi
+<pre class="src src-config" id="org8c49e20">5Gi
 </pre>
 </div>
 </div>
@@ -1757,7 +1754,7 @@ The size of the data volume for gitea:
 name.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org865718b">root
+<pre class="src src-config" id="org57879c6">root
 </pre>
 </div>
 </div>
@@ -1769,7 +1766,7 @@ name.
 <code>GITEA_EMAIL</code> is the admin account email address:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgc5546aa">root@example.com
+<pre class="src src-config" id="org41bef63">root@example.com
 </pre>
 </div>
 </div>
@@ -2158,7 +2155,7 @@ accidentally get published in this Org file.
 </p>
 
 <p>
-Now you can login to your domain at <a href="https://git">https://git</a>.<a id="org5891162"></a> 
+Now you can login to your domain at <a href="https://git">https://git</a>.<a id="org78afeb9"></a> 
 </p>
 </div>
 </div>
@@ -2289,7 +2286,7 @@ container</a> or use the <code>flux-go</code> AUR package on Arch Linux.
 <h3 id="FLUX_REPO_NAME"><span class="section-number-3">6.2</span> FLUX_REPO_NAME</h3>
 <div class="outline-text-3" id="text-6-2">
 <div class="org-src-container">
-<pre class="src src-config" id="orgfc54ad1">literate-k3s
+<pre class="src src-config" id="org27f8968">literate-k3s
 </pre>
 </div>
 </div>
@@ -2298,7 +2295,7 @@ container</a> or use the <code>flux-go</code> AUR package on Arch Linux.
 <h3 id="FLUX_GIT_REMOTE"><span class="section-number-3">6.3</span> FLUX_GIT_REMOTE</h3>
 <div class="outline-text-3" id="text-6-3">
 <div class="org-src-container">
-<pre class="src src-config" id="org6450883">ssh://git@git.k3s.example.com:2222/root/literate-k3s.git
+<pre class="src src-config" id="org42d2449">ssh://git@git.k3s.example.com:2222/root/literate-k3s.git
 </pre>
 </div>
 </div>
@@ -2341,7 +2338,7 @@ and keep the cluster in sync with its state.
 
 <p>
 On Gitea, click the <code>+</code> icon in the upper right corner to create a new <code>New
-Repository</code>. Call the new repository the same as <a href="#orgfc54ad1">FLUX_REPO_NAME</a>. 
+Repository</code>. Call the new repository the same as <a href="#org27f8968">FLUX_REPO_NAME</a>. 
 </p>
 
 <p>
@@ -2533,10 +2530,36 @@ And in another minute or so, the namespace should be gone:
 </div>
 </div>
 </div>
+
+<div id="outline-container-LICENSE" class="outline-2">
+<h2 id="LICENSE"><span class="section-number-2">7</span> LICENSE</h2>
+<div class="outline-text-2" id="text-7">
+<pre class="example">
+Copyright 2021 EnigmaCurry - https://github.com/EnigmaCurry/literate-k3s
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of
+this software and associated documentation files (the "Software"), to deal in
+the Software without restriction, including without limitation the rights to
+use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
+the Software, and to permit persons to whom the Software is furnished to do so,
+subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
+FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
+COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
+IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
+CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+</pre>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: EnigmaCurry</p>
-<p class="date">Created: 2021-02-01 Mon 10:03</p>
+<p class="date">Created: 2021-02-01 Mon 10:50</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
