--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-02-01 Mon 15:26 -->
+<!-- 2021-02-02 Tue 11:19 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Literate K3s Cluster</title>
@@ -448,61 +448,79 @@ for the JavaScript code in this tag.
 <div class="outline-text-3" id="text-1-1">
 <p>
 Literate Programming is a style of computer programming where you "weave
-together" code, configuration, prose text, and program results/output, all into
-a readable document; sometimes referred to as Executable Documentation. If you
-use a Literate Programming style, you will never forget to document how your
-program works, because your documentation <i>is</i> your program.
+together" code, configuration, prose text, and program results/output, presented
+as a single readable document; sometimes referred to as Executable Documentation
+or Reproducible Research. If you use a Literate Programming style, you will
+never forget to document how your program works, because your documentation <i>is</i>
+your program source code.
 </p>
 
 <p>
-<a href="https://k3s.io/">K3s</a> is a distribution of Kubernetes, which is easy to deploy to many kinds of
-computer systems, be it on bare-metal, or virtual machine, or in the cloud. It
-is exceedingly useful as a <b>self-hosted</b> variant of Kubernetes, which you can
-even run on a single node with at least 2GB or more of RAM (4GB recommended).
+<a href="https://k3s.io/">K3s</a> is a distribution of Kubernetes (software for running Docker containers),
+which is easy to deploy to many kinds of computer systems, be it on bare-metal,
+or virtual machine, or in the cloud. It is exceedingly useful as a <b>self-hosted</b>
+variant of Kubernetes, which you can even run on a single node with at least 2GB
+or more of RAM (4GB recommended). The cluster you'll create will be suitable for
+public web services, served through <a href="https://doc.traefik.io/traefik/">Traefik</a> ingress, and automatic TLS.
 </p>
 
 <p>
-This file is an <a href="https://orgmode.org">org-mode</a> and <a href="https://orgmode.org/worg/org-contrib/babel/">org-babel</a> document (or if you're reading this
-online, you're probably reading the exported HTML version. You may find <a target="_blank" href="k3s.org">the
-original Org source here</a>). This file, and one other file named <a target="_blank" href="config.org">config.org</a>,
-contain the entire configuration, and documentation, for creating a <a href="https://k3s.io/">K3s</a> cluster,
-from scratch, and the means with which to maintain your deployments over time.
-Essentially, this set of org files becomes your ultimate source of configuration
-for your entire cluster: to make a change to your cluster, you first need to
-make the change in this file. You should open this file in Emacs, edit it in
-org-mode, run the setup commands described, and <code>tangle</code> your source files. A
+This is a collection of <a href="https://orgmode.org">org-mode</a> and <a href="https://orgmode.org/worg/org-contrib/babel/">org-babel</a> documents. (Or if you're reading
+this online, you're probably reading the exported HTML version. You can find
+here the original <a target="_blank" href="k3s.org">k3s.org</a> and <a target="_blank" href="config.org">config.org</a> files used to generate this page.)
+These contain the entire code/documentation/config, for creating a <a href="https://k3s.io/">K3s</a> cluster,
+from scratch, and they are the means with which to create and edit YAML
+manifests for your cluster. Essentially, this set of org files becomes your
+ultimate source of configuration for your entire cluster: to make a change to
+your cluster, you first need to make the change in the documentation. You should
+open these files (<code>k3s.org</code> and <code>config.org</code>) in Emacs, edit them in org-mode,
+run the setup commands described inside, and <code>tangle</code> the source files. A
 minimal tutorial on using Emacs with org-babel is included, but this expects
 some pre-existing Emacs knowledge.
 </p>
 
 <p>
-Having your entire cluster config in one or two files may sound like it would be
-overwhelming, but there is another trick up Org's sleeve: <code>tangling</code>. If
-bringing both code and documentation together is called <code>weaving</code>, taking them
-apart again is called <code>tangling</code>. Tangling is a process, which takes the literal
-snippets of code from inside this documentation file, and exports them out to
-individual files, somewhere else on your system. When you tangle, all of the
-snippets in this file will overwrite all of the external files that they are
-associated with. So, although the ultimate config is contained in this one Org
-file, you will be able to see its exported form, in the various external places,
-as separate files. You should treat these generated files as compiled/read-only,
-because any changes that you make to them would get over-written, the next time
-you run the <code>tangle</code> process. If you put these external files into a git
-repository, and make small regular commits, it will be much easier to track the
-changes in each file.
+Having your entire cluster config inside of documentation may seem odd or
+overwhelming, (or it may sound great!) but there is another trick up Org's
+sleeve: <code>tangling</code>. If bringing both code and documentation together is called
+<code>weaving</code>, taking them apart again is called <code>tangling</code>. Tangling is an
+automatic process, which takes the literal snippets of code found inside these
+documentation files, and exports them out to normal individual files, somewhere
+else on your system. When you tangle, all of the code blocks in this file will
+overwrite all of the external files that they are associated with (those marked
+with the <code>:tangle FILE</code> code block header, writes itself to <code>FILE</code>). So,
+although the ultimate code and config is sourced from this documentation, you
+will also be able to see the code in its exported form, in the various external
+places, as separate files. You should treat these generated files as
+compiled/read-only, because any changes that you make to them would get
+over-written, the next time you <code>tangle</code> the documentation. However, if you put
+those external files into a git repository, and make small regular commits, it
+will become much easier to track the changes in each file over time.
 </p>
 
 <p>
-<a href="https://github.com/fluxcd/flux2">Flux version 2</a> is a Continuous Delivery system, that synchronizes the state of
-your cluster (and all deployments) from the state of YAML manifest files in a
-git repository. With Flux, you never run cluster commands like <code>kubectl</code> or
-<code>helm</code> directly, instead you commit these manifest files to your Flux git
-repository, and Flux applies the changes to the cluster, on your behalf. There
-will be a little bit of setup that you have to do manually with kubectl, in
-order to bootstrap Flux, but once Flux is running on your cluster, from that
-point on, you can control your entire cluster state simply by <code>tangling</code> this
-file, commiting the generated files to git, and pushing to the remote
-repository. Flux handles the actual upgrade for you, on git push.
+It is these derivative files (a collection of YAML manifests), that you generate
+via <code>tangle</code>, and put in a git repository, which become the source of truth for
+your cluster state, through Flux. <a href="https://github.com/fluxcd/flux2">Flux version 2</a> is a Continuous Delivery
+system, that synchronizes the state of your cluster (and all deployments) from
+the state of YAML manifest files in this git repository. With Flux, you never
+run cluster commands like <code>kubectl apply</code> or <code>helm install</code> manually, instead
+you commit these manifest files to the git repository, <code>git push</code>, and Flux
+applies the changes to the cluster, on your behalf. There will be a little bit
+of setup that you have to do manually with kubectl, in order to bootstrap Flux,
+but once Flux is running on your cluster, from that point on, you can control
+your entire cluster state simply by <code>tangling</code> this file, commiting the
+generated files to git, and pushing to the remote repository. Flux is
+continuously monitoring this repository for changes (checks every 1 minute) and
+automatically applies them.
+</p>
+
+<p>
+Flux supports reading manifests from any of the following formats: Vanilla K8s
+YAML, <a href="https://kubectl.docs.kubernetes.io/guides/introduction/kustomize/">Kustomize</a> YAML (used extensively in this document), and <a href="https://helm.sh/docs/topics/charts/">Helm Charts</a>, so
+you don't necessarily need to store <i>all</i> of the YAML in this org file, you can
+still package things in an external repository, and just provide the
+configuration here in this document. It's up to you how deep this goes&#x2026;
 </p>
 </div>
 </div>
@@ -604,6 +622,12 @@ evaluate each code block.
 See the <a href="https://orgmode.org/manual/Evaluating-Code-Blocks.html">Evaluating Code Blocks</a> section of the Org manual, but basically it's
 like this:
 </p>
+
+
+<div class="figure">
+<p><img src="https://ec-share.nyc3.digitaloceanspaces.com/emacs-org-mode-evaluate-code-block.gif" alt="emacs-org-mode-evaluate-code-block.gif" />
+</p>
+</div>
 
 <ol class="org-ol">
 <li>Code blocks start with <code>#+begin_src</code> and end with <code>#+end_src</code>.</li>
@@ -966,7 +990,7 @@ Core config includes configuration values referenced by all other configs.
 <code>CLUSTER</code> is the domain name of your cluster:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgc192b6d">k3s.example.com
+<pre class="src src-config" id="org55a14f1">k3s.example.com
 </pre>
 </div>
 </div>
@@ -978,7 +1002,7 @@ Core config includes configuration values referenced by all other configs.
 <code>CLUSTER_SSH_USER</code> is the admin SSH account of the cluster.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgef1e847">root
+<pre class="src src-config" id="org35651a2">root
 </pre>
 </div>
 </div>
@@ -987,7 +1011,7 @@ Core config includes configuration values referenced by all other configs.
 <h4 id="SEALED_SECRETS_VERSION"><span class="section-number-4">2.1.3</span> SEALED_SECRETS_VERSION</h4>
 <div class="outline-text-4" id="text-2-1-3">
 <div class="org-src-container">
-<pre class="src src-config" id="orga1fc9a9">v0.14.1
+<pre class="src src-config" id="orge07e1bb">v0.14.1
 </pre>
 </div>
 </div>
@@ -1004,7 +1028,7 @@ Core config includes configuration values referenced by all other configs.
 The version number of Traefik to install (eg. <code>2.3</code>).
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgcce5336">v2.3
+<pre class="src src-config" id="orgde5aafc">v2.3
 </pre>
 </div>
 </div>
@@ -1017,7 +1041,7 @@ The version number of Traefik to install (eg. <code>2.3</code>).
 prodider. 
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org4480ea0">you@example.com
+<pre class="src src-config" id="org1f8cdf4">you@example.com
 </pre>
 </div>
 </div>
@@ -1030,7 +1054,7 @@ prodider.
 provider). 
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org75c9e63">https://acme-staging-v02.api.letsencrypt.org/directory
+<pre class="src src-config" id="org85500fe">https://acme-staging-v02.api.letsencrypt.org/directory
 </pre>
 </div>
 
@@ -1071,7 +1095,7 @@ the rate limit, which blocks you out for a week.
 <code>TRAEFIK_LOG_LEVEL</code> is the filter level on the traefik log.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org6060a36">INFO
+<pre class="src src-config" id="orgf21c86f">INFO
 </pre>
 </div>
 </div>
@@ -1085,7 +1109,7 @@ domain name to respond to. <code>TRAEFIK_WHOAMI_DOMAIN</code> is the subdomain t
 whoami service responds to.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org41a925e">whoami.k3s.example.com
+<pre class="src src-config" id="orgdefeabd">whoami.k3s.example.com
 </pre>
 </div>
 </div>
@@ -1106,7 +1130,7 @@ NoWeb syntax. You probably don't need to customize these:
 <code>KUBE_CONFIG</code> is the local path to the kubectl config file
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org8e405f6">${HOME}/.kube/k3s.example.com-config
+<pre class="src src-config" id="org91f25d8">${HOME}/.kube/k3s.example.com-config
 </pre>
 </div>
 </div>
@@ -1506,7 +1530,7 @@ to direct traffic to any other node.
 <div class="outline-text-4" id="text-4-2-5">
 <p>
 <a href="https://github.com/traefik/whoami">traefik/whoami</a> can be deployed to test Traefik functionality. It listens to the
-domain <a href="#org41a925e">TRAEFIK_WHOAMI_DOMAIN</a> (eg. <code>whoami.k3s.example.com</code>).
+domain <a href="#orgdefeabd">TRAEFIK_WHOAMI_DOMAIN</a> (eg. <code>whoami.k3s.example.com</code>).
 </p>
 
 <div class="org-src-container">
@@ -1626,7 +1650,7 @@ Test with TLS verification on:
 </div>
 
 <p>
-TLS will not verify until you use the production <a href="#org75c9e63">TRAEFIK_ACME_SERVER</a>.
+TLS will not verify until you use the production <a href="#org85500fe">TRAEFIK_ACME_SERVER</a>.
 </p>
 </div>
 </div>
@@ -1709,7 +1733,7 @@ easily mirror these repositories to external hosts like GitHub.
 <h4 id="GITEA_DOMAIN"><span class="section-number-4">5.4.1</span> GITEA_DOMAIN</h4>
 <div class="outline-text-4" id="text-5-4-1">
 <div class="org-src-container">
-<pre class="src src-config" id="org062c398">git.k3s.example.com
+<pre class="src src-config" id="orgc72347a">git.k3s.example.com
 </pre>
 </div>
 </div>
@@ -1721,7 +1745,7 @@ easily mirror these repositories to external hosts like GitHub.
 The size of the postgres database volume for gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgba4f374">5Gi
+<pre class="src src-config" id="orgc0f7789">5Gi
 </pre>
 </div>
 </div>
@@ -1733,7 +1757,7 @@ The size of the postgres database volume for gitea:
 The size of the data volume for gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org3a37eef">5Gi
+<pre class="src src-config" id="orgdee2ced">5Gi
 </pre>
 </div>
 </div>
@@ -1746,7 +1770,7 @@ The size of the data volume for gitea:
 name.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgebcb90e">root
+<pre class="src src-config" id="orgf9877a2">root
 </pre>
 </div>
 </div>
@@ -1758,7 +1782,7 @@ name.
 <code>GITEA_EMAIL</code> is the admin account email address:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org33e5e94">root@example.com
+<pre class="src src-config" id="org32d1629">root@example.com
 </pre>
 </div>
 </div>
@@ -2147,7 +2171,7 @@ accidentally get published in this Org file.
 </p>
 
 <p>
-Now you can login to your domain at <a href="https://git">https://git</a>.<a id="org70f7024"></a> 
+Now you can login to your domain at <a href="https://git">https://git</a>.<a id="org0731630"></a> 
 </p>
 </div>
 </div>
@@ -2278,7 +2302,7 @@ container</a> or use the <code>flux-go</code> AUR package on Arch Linux.
 <h3 id="FLUX_REPO_NAME"><span class="section-number-3">6.2</span> FLUX_REPO_NAME</h3>
 <div class="outline-text-3" id="text-6-2">
 <div class="org-src-container">
-<pre class="src src-config" id="org183e847">literate-k3s
+<pre class="src src-config" id="org05860c0">literate-k3s
 </pre>
 </div>
 </div>
@@ -2287,7 +2311,7 @@ container</a> or use the <code>flux-go</code> AUR package on Arch Linux.
 <h3 id="FLUX_GIT_REMOTE"><span class="section-number-3">6.3</span> FLUX_GIT_REMOTE</h3>
 <div class="outline-text-3" id="text-6-3">
 <div class="org-src-container">
-<pre class="src src-config" id="orgc9a0b96">ssh://git@git.k3s.example.com:2222/root/literate-k3s.git
+<pre class="src src-config" id="orge969d8a">ssh://git@git.k3s.example.com:2222/root/literate-k3s.git
 </pre>
 </div>
 </div>
@@ -2330,7 +2354,7 @@ and keep the cluster in sync with its state.
 
 <p>
 On Gitea, click the <code>+</code> icon in the upper right corner to create a new <code>New
-Repository</code>. Call the new repository the same as <a href="#org183e847">FLUX_REPO_NAME</a>. 
+Repository</code>. Call the new repository the same as <a href="#org05860c0">FLUX_REPO_NAME</a>. 
 </p>
 
 <p>
@@ -2591,7 +2615,7 @@ packaged very well, so I instead opted to copy them here.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: EnigmaCurry</p>
-<p class="date">Created: 2021-02-01 Mon 15:26</p>
+<p class="date">Created: 2021-02-02 Tue 11:19</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
